@@ -1,6 +1,10 @@
 ------------------------------------------------------------------------------
 CHANGELOG
 ------------------------------------------------------------------------------
+2006-12-10  Robert Ancell  <bob27@users.sourceforge.net>
+	* Enable accidentally disabled GConf support.
+	* Save window size to configuration.
+
 2006-12-09  Dennis Cranston  <dennis_cranston@yahoo.com>
 
 	* glade/ai.glade:
